fix: word wrap globally

--- a/src/assets/styles/profile.css
+++ b/src/assets/styles/profile.css
@@ -30,8 +30,8 @@
   }
 
   .user-info {
-    width: 100%;
-    max-width: 100%;
+    width: 90%;
+    max-width: 90%;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -64,6 +64,7 @@
 .user-field {
   margin-bottom: 10px;
   padding-left: 30px;
+  padding-right: 30px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -74,17 +75,21 @@
   border-radius: 4px;
   margin: 5px;
   background-color: #f8f8f8;
-  padding: 10px; /* Agregado un relleno para separar el texto del borde */
-  box-sizing: border-box; /* Hace que el relleno y el borde se sumen al ancho total */
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 @media (max-width: 900px) {
   .user-value {
     margin-bottom: 10px;
-    padding: 5px; /* Ajusta el relleno según sea necesario en pantallas más pequeñas */
-    width: calc(100% - 20px); /* Resta el doble del margen para mantener el ancho total */
+    padding: 5px; 
+    width: calc(100% - 20px);
     display: flex;
     flex-direction: column;
+  }
+
+  .user-field{
+    padding-left: 0;
   }
 }
 
